# lightbts

./: .gitignore  MANIFEST.in  Makefile.am  NEWS  README  README.md  configure.ac  lightbts-cli  lightbts-cli.py  lightbts-email  lightbts-email.py  lightbts-web  lightbts-web.py  lightbts.py  meson.build  setup.py  testsuite
doc/: Makefile.am  architecture.mdwn  getting-started.mdwn  goals.mdwn  headers.mdwn  hooks.mdwn  lbts-close.1  lbts-create.1  lbts-deadline.1  lbts-fixed.1  lbts-found.1  lbts-help.1  lbts-hooks.5  lbts-import.1  lbts-init.1  lbts-link.1  lbts-noowner.1  lbts-notfixed.1  lbts-notfound.1  lbts-owner.1  lbts-progress.1  lbts-reopen.1  lbts-reply.1  lbts-retitle.1  lbts-severity.1  lbts-show.1  lbts-tags.1  lbts-unlink.1  lbts.1  lightbts.7  links.mdwn  split.mdwn  tags.mdwn
prototype/: README  lightbts-email  lightbts-web  lightbts.py  testsuite
src/: .gitignore  Makefile  Makefile.am  action.cpp  action.hpp  cli.cc  cli.cpp  cli.hpp  config.cpp  config.hpp  create.cpp  create.hpp  edit.cpp  edit.hpp  gentemplates.cpp  import.cpp  import.hpp  init.cpp  lightbts.cpp  lightbts.hpp  list.cpp  list.hpp  meson.build  pager.cpp  pager.hpp  reply.cpp  reply.hpp  show.cpp  show.hpp  sqlite3.hpp
template/: bug.html  lightbts.css  main.html  message.html
templates/: bug.html  bugrow.html  lightbts.css  main.html  new.txt  reply.txt
test/: .gitignore  Makefile.am  action.test  basic.test  config.test  create.test  import.test  list.test  meson.build  reply.test  show.test  testlib.sh
