man_MANS = \
	lbts.1 \
	lbts-close.1 \
	lbts-create.1 \
	lbts-deadline.1 \
	lbts-fixed.1 \
	lbts-found.1 \
	lbts-help.1 \
	lbts-hooks.5 \
	lbts-import.1 \
	lbts-init.1 \
	lbts-link.1 \
	lbts-noowner.1 \
	lbts-notfixed.1 \
	lbts-notfound.1 \
	lbts-owner.1 \
	lbts-progress.1 \
	lbts-reopen.1 \
	lbts-reply.1 \
	lbts-retitle.1 \
	lbts-severity.1 \
	lbts-show.1 \
	lbts-tags.1 \
	lbts-unlink.1 \
	lightbts.7
